В секции Чем мы занимаемся текст с фоном спозиционирован поверх изображения.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                 width="370px"
                 height="294px"
               />
+              <p class="text-subject">Десктопные приложения</p>
             </li>
             <li class="item">
               <img
@@ -149,6 +150,7 @@
                 width="370px"
                 height="294px"
               />
+              <p class="text-subject">Мобильные приложения</p>
             </li>
             <li class="item">
               <img
@@ -157,6 +159,7 @@
                 width="370px"
                 height="294px"
               />
+              <p class="text-subject">Дизайнерские решения</p>
             </li>
           </ul>
         </section>
