--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >
           <ul class="header list">
             <li class="item-header">
-              <a class="link-header-nav link" href="">Студия</a>
+              <a class="link-header-nav link current" href="">Студия</a>
             </li>
             <li class="item-header">
               <a class="link-header link" href="./portfolio.html">Портфолио</a>
