--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
               <a class="link-header link" href="./index.html">Студия</a>
             </li>
             <li class="item-header">
-              <a class="link-header-nav link" href="./portfolio.html"
+              <a class="link-header-nav link current" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
