Додана анімація на сторінку Портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,13 +91,20 @@
           <ul class="list-flexbox">
             <li class="element">
               <a class="gallery link" href="">
-                <img
-                  class="image"
-                  src="./images/1.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="image"
+                    src="./images/1.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="paragraph">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="element-flexbox">
                   <h3 class="progect">Технокряк</h3>
                   <p class="desc">Веб-сайт</p>
@@ -106,13 +113,21 @@
             </li>
             <li class="element">
               <a class="gallery link" href="">
-                <img
-                  class="image"
-                  src="./images/2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="image"
+                    src="./images/2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="paragraph">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="element-flexbox">
                   <h3 class="progect">
                     Постер<span lang="en">New Orlean vs Golden Star</span>
@@ -123,13 +138,20 @@
             </li>
             <li class="element">
               <a class="gallery link" href="">
-                <img
-                  class="image"
-                  src="./images/3.jpg"
-                  alt="Ресторан Seafood"
-                  width="370                height="
-                  294
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="image"
+                    src="./images/3.jpg"
+                    alt="Ресторан Seafood"
+                    width="370                height="
+                    294
+                  />
+                  <p class="paragraph">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="element-flexbox">
                   <h3 class="progect">
                     Ресторан<span lang="en">Seafood</span>
@@ -140,13 +162,22 @@
             </li>
             <li class="element">
               <a class="gallery link" href="">
-                <img
-                  class="image"
-                  src="./images/4.jpg"
-                  alt="Проект Prime"
-                  width="370                height="
-                  294
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="image"
+                    src="./images/4.jpg"
+                    alt="Проект Prime"
+                    width="370                height="
+                    294
+                  />
+
+                  <p class="paragraph">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="element-flexbox">
                   <h3 class="progect">Проект<span lang="en">Prime</span></h3>
                   <p class="desc">Маркетинг</p>
@@ -155,13 +186,22 @@
             </li>
             <li class="element">
               <a class="gallery link" href="">
-                <img
-                  class="image"
-                  src="./images/5.jpg"
-                  alt="Проект Boxes"
-                  width="370                  height="
-                  294
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="image"
+                    src="./images/5.jpg"
+                    alt="Проект Boxes"
+                    width="370                  height="
+                    294
+                  />
+
+                  <p class="paragraph">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="element-flexbox">
                   <h3 class="progect">Проект<span lang="en">Boxes</span></h3>
                   <p class="desc">Приложение</p>
@@ -170,13 +210,22 @@
             </li>
             <li class="element">
               <a class="gallery link" href="">
-                <img
-                  class="image"
-                  src="./images/6.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370                  height="
-                  294
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="image"
+                    src="./images/6.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370                  height="
+                    294
+                  />
+
+                  <p class="paragraph">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="element-flexbox">
                   <h3 class="progect" lang="en">Inspiration has no Borders</h3>
                   <p class="desc">Веб-сайт</p>
@@ -185,13 +234,22 @@
             </li>
             <li class="element">
               <a class="gallery link" href="">
-                <img
-                  class="image"
-                  src="./images/7.jpg"
-                  alt="Проект Prime"
-                  width="370                  height="
-                  294
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="image"
+                    src="./images/7.jpg"
+                    alt="Проект Prime"
+                    width="370                  height="
+                    294
+                  />
+
+                  <p class="paragraph">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="element-flexbox">
                   <h3 class="progect">
                     Издание<span lang="en">Limited Edition</span>
@@ -202,13 +260,22 @@
             </li>
             <li class="element">
               <a class="gallery link" href="">
-                <img
-                  class="image"
-                  src="./images/8.jpg"
-                  alt="Проект LAB"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="image"
+                    src="./images/8.jpg"
+                    alt="Проект LAB"
+                    width="370"
+                    height="294"
+                  />
+
+                  <p class="paragraph">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="element-flexbox">
                   <h3 class="progect">Проект<span lang="en">LAB</span></h3>
                   <p class="desc">Маркетинг</p>
@@ -217,13 +284,22 @@
             </li>
             <li class="element">
               <a class="gallery link" href="">
-                <img
-                  class="image"
-                  src="./images/9.jpg"
-                  alt="Growing Business"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="image"
+                    src="./images/9.jpg"
+                    alt="Growing Business"
+                    width="370"
+                    height="294"
+                  />
+
+                  <p class="paragraph">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="element-flexbox">
                   <h3 class="progect" lang="en">Growing Business</h3>
                   <p class="desc">Приложение</p>
